fix(commentform): color contrast correction

--- a/src/elements/content-sidebar/activity-feed/comment-form/CommentForm.scss
+++ b/src/elements/content-sidebar/activity-feed/comment-form/CommentForm.scss
@@ -37,7 +37,7 @@
 
     .bcs-CommentForm-tip {
         margin-top: 10px;
-        color: $bdl-gray-50;
+        color: $bdl-gray-62;
     }
 
     .bcs-CommentFormControls {
